--- a/static/index.html
+++ b/static/index.html
@@ -22,6 +22,19 @@
 <body>
     <canvas></canvas>
     <button>Save Image</button>
+    <script id="vertex-shader" type="x-shader/x-vertex">
+        attribute vec4 position;
+
+        void main() {
+          gl_Position = position;
+        }
+      </script>
+
+    <script id="fragment-shader" type="x-shader/x-fragment">
+        void main() {
+            gl_FragColor = vec4(1.0, 0.0, 0.0, 1.0);
+          }
+      </script>
 </body>
 
 </html>
