--- a/static/index.html
+++ b/static/index.html
@@ -22,17 +22,21 @@
 <body>
     <canvas></canvas>
     <button>Save Image</button>
-    <script id="vertex-shader" type="x-shader/x-vertex">
-        attribute vec4 position;
+    <script id="vertex-shader" type="x-shader/x-vertex">#version 300 es
+        in vec4 a_position;
 
         void main() {
-          gl_Position = position;
+            gl_Position = a_position;
         }
       </script>
 
-    <script id="fragment-shader" type="x-shader/x-fragment">
+    <script id="fragment-shader" type="x-shader/x-fragment">#version 300 es
+        precision highp float;
+
+        out vec4 o_color;
+        
         void main() {
-            gl_FragColor = vec4(1.0, 0.0, 0.0, 1.0);
+            o_color = vec4(1.0, 0.0, 0.0, 1.0);
           }
       </script>
 </body>
