--- a/static/index.html
+++ b/static/index.html
@@ -51,7 +51,7 @@
         vec3 ray_color(in Ray r) {
             vec3 unit_direction = normalize(r.direction);
             float t = 0.5 * (unit_direction.y + 1.0);
-            return (1.0 - t) * vec3(1.0, 1.0, 1.0) + t * vec3(0.5, 0.7, 1.0);
+            return mix(vec3(1.0, 1.0, 1.0), vec3(0.5, 0.7, 1.0), t);
         }
         
         void main() {
