--- a/static/index.html
+++ b/static/index.html
@@ -48,7 +48,25 @@
 
         in vec2 v_position;
 
+        bool hit_sphere(in vec3 center, in float radius, in Ray r) {
+            vec3 oc = r.origin - center;
+            float a = dot(r.direction, r.direction);
+            float b = 2.0 * dot(oc, r.direction);
+            float c = dot(oc, oc) - radius * radius;
+            float discriminant = b * b - 4. * a * c;
+            return discriminant > 0.;
+        }
+
         vec3 ray_color(in Ray r) {
+            vec3 sphere_center = vec3(0., 0., -1.);
+            float radius = 0.5;
+
+            bool hit = hit_sphere(sphere_center, radius, r);
+
+            if (hit) {
+                return vec3(1., 0., 0.);
+            }
+
             vec3 unit_direction = normalize(r.direction);
             float t = 0.5 * (unit_direction.y + 1.0);
             return mix(vec3(1.0, 1.0, 1.0), vec3(0.5, 0.7, 1.0), t);
