--- a/static/index.html
+++ b/static/index.html
@@ -44,6 +44,11 @@
             vec3 direction;
         };
 
+        struct Sphere {
+            vec3 center;
+            float radius;
+        };
+
         out vec4 o_color;
 
         in vec2 v_position;
@@ -52,11 +57,11 @@
             return r.origin + r.direction * hit_t;
         }
 
-        float hit_sphere(in vec3 sphere_center, in float sphere_radius, in Ray r) {
-            vec3 oc = r.origin - sphere_center;
+        float hit_sphere(in Sphere sphere, in Ray r) {
+            vec3 oc = r.origin - sphere.center;
             float a = dot(r.direction, r.direction);
             float b = 2.0 * dot(oc, r.direction);
-            float c = dot(oc, oc) - sphere_radius * sphere_radius;
+            float c = dot(oc, oc) - sphere.radius * sphere.radius;
             float discriminant = b * b - 4. * a * c;
             if (discriminant < 0.) {
                 return -1.0;
@@ -66,13 +71,12 @@
         }
 
         vec3 ray_color(in Ray r) {
-            vec3 sphere_center = vec3(0., 0., -1.);
-            float sphere_radius = 0.5;
+            Sphere sphere_1 = Sphere(vec3(0., 0., -1.), 0.5);
 
-            float hit_t = hit_sphere(sphere_center, sphere_radius, r);
+            float hit_t = hit_sphere(sphere_1, r);
              if (hit_t > 0.) {
                 vec3 hit_point = ray_at(r, hit_t);
-                vec3 normal = normalize(hit_point - sphere_center);
+                vec3 normal = normalize(hit_point - sphere_1.center);
                 return (normal + 1.) * 0.5;
             }
 
