--- a/static/index.html
+++ b/static/index.html
@@ -110,12 +110,16 @@
         }
 
         bool hit_world(in Ray r, in float t_min, in float t_max, inout HitRecord hit_record) {
-            Sphere sphere_1 = Sphere(vec3(0., 0., -1.), 0.5);
-            Sphere sphere_2 = Sphere(vec3(0., -100.5, -1.), 100.);
-
+            Sphere sphere_list[2] = Sphere[2](
+                Sphere(vec3(0., 0., -1.), 0.5),
+                Sphere(vec3(0., -100.5, -1.), 100.)
+            );
+            
             bool hit = false;
-            hit = hit_sphere(sphere_1, r, t_min, t_max, hit_record) || hit;
-            hit = hit_sphere(sphere_2, r, t_min, t_max, hit_record) || hit;
+            for (int i = 0; i < sphere_list.length(); i++) {
+                Sphere sphere = sphere_list[i];
+                hit = hit_sphere(sphere, r, t_min, t_max, hit_record) || hit;
+            }
 
             return hit;
         }
