--- a/static/index.html
+++ b/static/index.html
@@ -117,18 +117,12 @@
         }
 
         vec3 random_in_unit_sphere() {
-            vec3 random = (hash3(global_seed) * 2.) - 1.;
-            float theta = random.x * 2.0 * PI;
-            float phi = acos(2.0 * random.y - 1.0);
-            float r = pow(random.z, 1. / 3.);
-            float sin_theta = sin(theta);
-            float cos_theta = cos(theta);
-            float sin_phi = sin(phi);
-            float cos_phi = cos(phi);
-            float x = r * sin_phi * cos_theta;
-            float y = r * sin_phi * sin_theta;
-            float z = r * cos_phi;
-            return vec3(x, y, z);
+            // no idea how this algorithm works, but it works much better than the one I was using.
+            // From reinder https://www.shadertoy.com/view/llVcDz
+            vec3 h = hash3(global_seed) * vec3(2., PI * 2., 1.) - vec3(1., 0., 0.);
+            float phi = h.y;
+            float r = pow(h.z, 1./3.);
+            return r * vec3(sqrt(1. - h.x * h.x) * vec2(sin(phi), cos(phi)), h.x);
         }
 
         vec3 random_unit_vec() {
@@ -207,8 +201,7 @@
                 // hit record gets modified with hit details if there was a hit
                 HitRecord hit_record = HitRecord(vec3(0., 0., -MAX_T), 0., vec3(0.), false);
                 if (hit_world(r, MIN_T, MAX_T, hit_record)) {
-                    vec3 random_direction = random_unit_vec();
-                    vec3 target = hit_record.hit_point + hit_record.normal + random_direction;
+                    vec3 target = hit_record.hit_point + hit_record.normal + random_unit_vec();
 
                     // color diminishes on reflection
                     color *= 0.5;
