create fps indicator

--- a/static/index.html
+++ b/static/index.html
@@ -20,6 +20,7 @@
 
 <body>
     <canvas></canvas>
+    <p id="fps">0 fps</p>
     <button>Save Image</button>
     <script id="vertex-shader" type="x-shader/x-vertex">#version 300 es
         in vec4 a_position;
