--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <script src="/main.js" defer></script>
+    <script src="./main.js" defer></script>
     <style>
         canvas {
             width: 100%;
