--- a/static/index.html
+++ b/static/index.html
@@ -9,28 +9,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <script src="./main.js" defer></script>
-    <style>
-        canvas {
-            width: 100%;
-            object-fit: contain;
-        }
-        #fps {
-            position: fixed;
-            top: 1rem;
-            left: 1rem;
-        }
-        button {
-            position: fixed;
-            top: 3rem;
-            left: 1rem;
-        }
-    </style>
 </head>
 
 <body>
-    <canvas></canvas>
-    <p id="fps">0 fps</p>
-    <button>Save Image</button>
+    <div class="container">
+        <canvas></canvas>
+        <div class="controls">
+            <button id="save">Save Image</button>
+            <p id="fps">0 fps</p>
+        </div>
+    </div>
     <script id="vertex-shader" type="x-shader/x-vertex">#version 300 es
         in vec4 a_position;
 
