enable first-person viewing mode

--- a/static/index.html
+++ b/static/index.html
@@ -19,6 +19,12 @@
             <p id="fps">0 fps</p>
         </div>
     </div>
+    <div id="backdrop">
+        <p id="message">
+          Please enable first-person viewing mode
+          <button id="enable">Enable</button>
+        </p>
+      </div>
     <script id="vertex-shader" type="x-shader/x-vertex">#version 300 es
         in vec4 a_position;
 
