move handle_save_image into rust

--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <canvas></canvas>
         <div class="controls">
-            <button id="save">Save Image</button>
+            <button id="save-image">Save Image</button>
             <p id="fps">0 fps</p>
         </div>
     </div>
